deploy/all-in-prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-demoapp
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-demoapp
  template:
    metadata:
      labels:
        app: nodejs-demoapp
    spec:
      containers:
        - name: demoapp
          image: $IMAGE_NAME:$IMAGE_TAG
          imagePullPolicy: Always       
          ports:
            - name: http
              protocol: TCP
              containerPort: 3000
          resources:
            limits:
              cpu: 1000m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 256Mi
